added about section, updated skills and experience.

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,7 +4,7 @@
   <ul class="entries">
     <li>
       <span class="date">1996-2000</span>
-      <h3>Master of Communication Studies - <a href="http://vub.be">VUB, University of Brussels</a></h3>
+      <h3>Master of Science in Communication Studies - <a href="http://vub.be">VUB, University of Brussels</a></h3>
     </li>
   </ul>
 </section>
