--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -4,7 +4,7 @@
   <ul>
     <li>
       <span class="date">2015-present</span>
-      <h3>UX Designer and Creative Director - <a class="company" href="http://vermontegov.com">Vermont&nbsp;Information&nbsp;Consortium</a></h3>
+      <h3>UX Designer + Creative Director - <a class="company" href="http://vermontegov.com">Vermont&nbsp;Information&nbsp;Consortium</a></h3>
       <p class="description">UX Design, Creative Direction, and business planning for Vermont Information Consortium, a web agency focussed on providing websites and online services for Vermont&nbsp;State&nbsp;Government.</p>
     </li>
     <li>
