--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -8,7 +8,7 @@
       <!-- <p class="type">& front-end developer</p> -->
     </div>
     <div>
-      <a href="#portfolio" class="page-scroll btn btn-xl">Tell me more</a>
+      <a href="#about" class="page-scroll btn btn-xl">Tell me more</a>
     </div>
   </section>
 </div>
