--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -10,12 +10,13 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Research Workshops</h3>
+                                    <h3>Research</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>In my current position, I've introduced Research Workshops. During these workshops we invite the client over to learn about common web design concepts, strategies and best practices.</p>
-                                  <p>Usually, we discuss things like Personas, Style Tiles and Style Guides, Use Cases, Task Analysis, User Stories, etc. We then work with the client to further develop these elements and write up a comprehensive project or product proposal.</p>                                </div>
+                                  <p>As a UX Designer and jack of many trades, I’m no stranger to research.</p>
+                                  <p><strong>Tools:</strong> User Interviews, Competitor Analysis, Google Analytics, Design Workshops, Touchpoint meetings.</p>
                                 </div>
+                            </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
@@ -23,11 +24,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Application Flow</h3>
+                                    <h3>Workshops</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>Before starting any wireframes, and often even before finalizing the application architecture, I like to draw up the Application Flow. Broken down by tasks and inspired by the use cases and other results from the discovery phase. I draw the flow and annotate it with directions and questions for the developers.</p>
-                                </div>
+                                  <p>In my current position, I've introduced Research and Design Workshops. During these workshops we invite the client over to learn about common web design concepts, strategies and best practices.</p>
+                                  <p>We then work together to draft Story Boards, User Stories, Task Flows, Personas, etc.</p>
+                                  <p><strong>Tools:</strong> Whiteboards, Post-it Notes, Jira, Coffee, Cookies and Chocolate. </p>
                             </div>
                         </li>
                         <li>
@@ -36,10 +38,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Wireframes</h3>
+                                    <h3>Workflows and Wireframes</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>Despite the proliferation of platforms and devices, wireframing is still a crucial step in the design of most web applications. The tools I use vary, sometimes I stick to pen and paper, other times I use Sketch and on occasion I'll go all out and design interactive wireframes using a combination of tools (Sketch, Balsamiq, Invision, ...). Regardless of the tools used, I always make sure to annotate well and to solicit feedback from the developers and clients.</p>
+                                  <p>Breaking down user stories into workflows isn't the most exciting part of the design process, but that doesn't make it any less important. And despite the proliferation of platforms and devices, wireframing is still a crucial step too.</p>
+                                  <p><strong>Tools:</strong> Pen and Paper, Sketch, Balsamiq, Gliffy.</p>
                                 </div>
                             </div>
                         </li>
@@ -49,13 +52,13 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Mockups</h3>
+                                    <h3>Mockups and Prototypes</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>Instead of pixel perfect mockups, I often prefer to build a quick prototype. By leveraging frameworks, libraries, and templates, I find that this is often faster and easier for the client to comprehend.</p>
-                                  <p>Some of the tools I use for this are: handcrafted html and css, Jekyll, Drupal or WordPress, and libraries or frameworks such as Bourbon, Neat, Twig, Compass, etc.</p>
-                                  <p>Of course some projects still benefit from classic mockups drawn to perfection in Sketch, Photoshop or Illustrator. To make PNG mockups interactive I prefer Invision or Marvel.</p>
-                                </div>
+                                  <p>Instead of pixel perfect mockups, I often prefer to build a quick prototype. By leveraging frameworks, libraries, and templates, I find that this is almost as fast and offers a better experience than interactive mockups.</p>
+                                  <p>There’s a time and place for visually accurate mockups though. Especially when deciding on the building blocks for modular design.</p>
+                                  <p><strong>Tools:</strong> Sketch, Adobe Illustrator, Invision, Marvel and a variety of platforms, frameworks, and libraries (Jekyll, Drupal, Bootstrap, my own modular design library, handcrafted HTML/CSS/JS)</p>
+                                  </div>
                             </div>
                         </li>
                         <li>
@@ -64,10 +67,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>UI Framework</h3>
+                                    <h3>Modular Design</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>To make rapid prototyping and final development as efficient as possible, I've created a library of code snippets for our developers. Most common application elements and some complete tasks are available as html/css/js snippets. This not only increases efficiencies, it also ensures more consistent front-end code.</p>
+                                  <p>I like the idea of Atomic Design, but haven’t found the perfect way of implementing it into my workflow. Instead, I’ve created my own modular design system. This not only increases efficiencies, it also ensures more consistent front-end code. The system encompasses a style guide, Sketch template files, and a library of HTML/CSS/JS code snippets.</p>
                                 </div>
                         </li>
                         <li class="timeline-inverted">
@@ -76,10 +79,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>User and usability testing</h3>
+                                    <h3>Front-End Development</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>For user testing and usability testing, I like to use tools like surveys and feedback forms, Peek, A/B testing, regular touchpoint meetings with the client, and the occasional focus group.</p>
+                                  <p>I believe that it’s very useful for a UX Designer to have a solid understanding of HTML/CSS and at least a solid working knowledge of Javascript and some other programming languages. As such I make sure to stay up to date with the latest HTML, CSS (and SASS) standards, as well as maintaining a basic understanding of Javascript and PHP.</p>
                                 </div>
                         </li>
                         <li>
@@ -104,7 +107,7 @@
                                     <h3>Project Management</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>While we currently use a semi-Agile approach to project management and I'm not formally trained in Agile or SCRUM, I have plenty of experience making sure a project moves along a well planned path from start to finish.</p>
+                                  <p>While my team currently use a semi-Agile approach to project management and I'm not formally trained in Agile, I have plenty of experience making sure a project moves along a well planned path from start to finish.</p>
                                 </div>
                             </div>
                         </li>
@@ -143,6 +146,7 @@
                                 </div>
                                 <div class="timeline-body">
                                   <p class="description">My background in communication studies and my passion for language have helped me run social media campaigns, write website copy or blog posts, and of course pitch projects and products to potential clients.</p>
+                                  <p>My native tongue is Dutch, but at this point it's not a stretch to call English my first language. I'm also fluent, if maybe a bit rusty, in French and German too.</p>
                                 </div>
                             </div>
                         </li>
