--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,7 @@
 
     <div class="page-content">
       {% include intro.html %}
+      {% include about.html %}
       {% include portfolio.html %}
       {% include skills.html %}
       {% include experience.html %}
