--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -10,7 +10,7 @@
                         <i class="fa fa-plus fa-3x"></i>
                     </div>
                 </div>
-                <img src="{{ post.image }}" alt="portfolio thumbnail">
+                <img src="{{ post.main_image }}" alt="post.main_image_alt">
             </a>
             <div class="portfolio-caption">
                 <h3>{{ post.title }}</h3>
