Updated skills section

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,8 +13,8 @@
                                     <h3>Research</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>As a UX Designer and jack of many trades, I’m no stranger to research.</p>
-                                  <p><strong>Tools:</strong> User Interviews, Competitor Analysis, Google Analytics, Design Workshops, Touchpoint meetings.</p>
+                                  <p>As a UX Designer and jack of many trades, I’m no stranger to conducting research.</p>
+                                  <p><strong>Tools:</strong> User Interviews, Field Trips, Competitor Analysis, Google Analytics, Workshops, Touchpoint Meetings.</p>
                                 </div>
                             </div>
                         </li>
@@ -24,12 +24,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Workshops</h3>
+                                    <h3>Story Boards, User Stories, and Workflows</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>In my current position, I've introduced Research and Design Workshops. During these workshops we invite the client over to learn about common web design concepts, strategies and best practices.</p>
-                                  <p>We then work together to draft Story Boards, User Stories, Task Flows, Personas, etc.</p>
-                                  <p><strong>Tools:</strong> Whiteboards, Post-it Notes, Jira, Coffee, Cookies and Chocolate. </p>
+                                  <p>I often like to draw story boards, these are very helpful in breaking tasks down into user stories. The user stories in turn inform the application workflows. I make sure to annotate the workflows with directions and questions for the developers. The user stories and workflows often influence the final data architecture.</p>
+                                  <p><strong>Tools:</strong> Pen and paper, Spreadsheets, JIRA, Gliffy, Sketch.</p>
                             </div>
                         </li>
                         <li>
@@ -38,11 +37,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Workflows and Wireframes</h3>
+                                    <h3>Wireframes and Prototypes</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>Breaking down user stories into workflows isn't the most exciting part of the design process, but that doesn't make it any less important. And despite the proliferation of platforms and devices, wireframing is still a crucial step too.</p>
-                                  <p><strong>Tools:</strong> Pen and Paper, Sketch, Balsamiq, Gliffy.</p>
+                                  <p>Despite the proliferation of platforms and devices, wireframes are still very relevant and useful. Nothing surfaces overlooked details better than a prototype, however rough it might be. Instead of clickable wireframes or mockups, I often prefer to have a working prototype in code.</p>
+                                  <p><strong>Tools:</strong> Pen and paper, Sketch, Balsamiq, Invision, Webflow, handcrafted HTML/CSS/JS.</p>
                                 </div>
                             </div>
                         </li>
@@ -52,12 +51,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Mockups and Prototypes</h3>
+                                    <h3>Mockups and Comps</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>Instead of pixel perfect mockups, I often prefer to build a quick prototype. By leveraging frameworks, libraries, and templates, I find that this is almost as fast and offers a better experience than interactive mockups.</p>
-                                  <p>There’s a time and place for visually accurate mockups though. Especially when deciding on the building blocks for modular design.</p>
-                                  <p><strong>Tools:</strong> Sketch, Adobe Illustrator, Invision, Marvel and a variety of platforms, frameworks, and libraries (Jekyll, Drupal, Bootstrap, my own modular design library, handcrafted HTML/CSS/JS)</p>
+                                  <p>Our pattern library has made this step somewhat redundant, but there still is a time and place for visually accurate mockups and comps. Especially when soliciting feedback or filling in gaps in the pattern library.</p>
+                                  <p><strong>Tools:</strong> Sketch, Adobe Illustrator CC, Invision.</p>
                                   </div>
                             </div>
                         </li>
@@ -70,7 +68,7 @@
                                     <h3>Modular Design</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>I like the idea of Atomic Design, but haven’t found the perfect way of implementing it into my workflow. Instead, I’ve created my own modular design system. This not only increases efficiencies, it also ensures more consistent front-end code. The system encompasses a style guide, Sketch template files, and a library of HTML/CSS/JS code snippets.</p>
+                                  <p>I like the idea of Atomic Design, but haven’t found the perfect way of implementing it into my workflow. Instead, I’ve created my own modular design system. The system is based on a pattern library which includes a style guide, Sketch template files, and HTML/CSS/JS code snippets.</p>
                                 </div>
                         </li>
                         <li class="timeline-inverted">
@@ -82,7 +80,8 @@
                                     <h3>Front-End Development</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>I believe that it’s very useful for a UX Designer to have a solid understanding of HTML/CSS and at least a solid working knowledge of Javascript and some other programming languages. As such I make sure to stay up to date with the latest HTML, CSS (and SASS) standards, as well as maintaining a basic understanding of Javascript and PHP.</p>
+                                  <p>I believe that it’s very useful for a UX/UI Designer to have a solid understanding of HTML/CSS/JS and at least a working knowledge of some other programming languages. As such I make sure to stay up to date with the latest HTML, CSS (and SASS) trends and standards, as well as maintaining a basic understanding of Javascript and PHP.</p>
+                                  <p><strong>Tools:</strong> A variety of platforms (Drupal, WordPress, Jekyll), frameworks and libraries (Bootstrap, Bourbon and Neat, etc.), handcrafted HTML/CSS/JS</p>
                                 </div>
                         </li>
                         <li>
@@ -108,6 +107,7 @@
                                 </div>
                                 <div class="timeline-body">
                                   <p>While my team currently use a semi-Agile approach to project management and I'm not formally trained in Agile, I have plenty of experience making sure a project moves along a well planned path from start to finish.</p>
+                                  <p><strong>Tools:</strong> Basecamp, JIRA, Confluence.</p>
                                 </div>
                             </div>
                         </li>
@@ -134,6 +134,7 @@
                                 </div>
                                 <div class="timeline-body">
                                   <p>Despite my focus on UX and web design, the occasional offline project has come my way. I've done branding and logo design, and have designed brochures, informational cards, signage and more.</p>
+                                  <p><strong>Tools:</strong> Pen and Paper, Adobe Photoshop, Adobe Illustrator, Adobe Indesign, Sketch. </p>
                                 </div>
                         </li>
                         <li>
