--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -4,7 +4,7 @@
 <p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our three year old son Felix. We enjoy all kinds of outdoor activities here in Vermont. I'm originally from Belgium, so mountains and seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
 <ul class="entries">
   <li><h3>Currently Reading:</h3>Purity (Jonathan Franzen), The Shape of Design (Frank&nbsp;Chimero), Change By Design (Tim&nbsp;Brown)</li>
-  <li><h3>Currently Watching:</h3>In anticipation of the new season of Game of Thrones, Laura and I are working our way through our saved queue of&nbsp;movies</li>
+  <li><h3>Currently Watching:</h3>In addition to binge watching Insecure and Narcos, Laura and I are working our way through our saved queue of&nbsp;movies</li>
   <li><h3>Currently Learning:</h3> Design Systems, Service Design, Conversational&nbsp;UI, Drupal 8</li>
 </ul>
 </section>
