updated about, experience and personal sections to reflect that I am no longer looking for a new job.

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -3,7 +3,12 @@
   <h2 class="section-title">Experience</h2>
   <ul>
     <li>
-      <span class="date">2015-present</span>
+      <span class="date">2017-present</span>
+      <h3>UX Designer - <a class="company" href="http://communicatehealth.com">Communicate Health</a></h3>
+      <p class="description">UX Design for Communicate Health, an award-winning team of content and usability experts dedicated to designing better health information.</p>
+    </li>
+    <li>
+      <span class="date">2015-2017</span>
       <h3>UX Designer + Creative Director - <a class="company" href="http://vermontegov.com">Vermont&nbsp;Information&nbsp;Consortium</a></h3>
       <p class="description">UX Design, Creative Direction, and business planning for Vermont Information Consortium, a web agency focussed on providing websites and online services for Vermont&nbsp;State&nbsp;Government.</p>
     </li>
