--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,8 @@
 <section id="about">
   <h2 class="section-title">About</h2>
   <div class="first-column">
-    <p>As a creative director and UX designer, I live and breathe digital design. I’m always hungry for new challenges that I can dream up solutions for.</p>
-    <p>Building the best possible digital products isn’t just team work, it’s a team sport. I do my best work as part of a team of driven web professionals. If your team needs a user-centric UX designer, I’d love to hear from you!</p>
+    <p>As a UX/UI designer, I live and breathe digital design. I’m always hungry for new challenges that I can dream up solutions for.</p>
+    <p>Building the best possible digital products isn’t just team work, it’s a team sport. I do my best work as part of a team of driven web professionals.</p>
     <div>
       <a href="#contact" class="page-scroll btn btn-xl">Get in Touch!</a>
     </div>
