--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,7 +5,7 @@
     <li>
       <span class="date">2017-present</span>
       <h3>UX Designer - <a class="company" href="http://communicatehealth.com">Communicate Health</a></h3>
-      <p class="description">UX Design for Communicate Health, an award-winning team of content and usability experts dedicated to designing better health information.</p>
+      <p class="description">UX Design for Communicate Health, an award-winning team of content and usability experts dedicated to designing better health&nbsp;information.</p>
     </li>
     <li>
       <span class="date">2015-2017</span>
