--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -1,7 +1,7 @@
 <!-- Personal Section -->
 <section id="personal">
 <h2 class="section-title">Personal</h2>
-<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our four year old son Felix. We enjoy all kinds of outdoor activities here in Vermont. I'm originally from Belgium, so mountains and seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
+<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our four year old son Felix. We enjoy all kinds of outdoor activities. I'm originally from Belgium, so seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
 <ul class="entries">
   <li><h3>Currently Reading:</h3>Freedom (Jonathan&nbsp;Franzen), Atomic&nbsp;Design (Brad&nbsp;Frost), Change&nbsp;By&nbsp;Design (Tim&nbsp;Brown)</li>
   <li><h3>Currently Watching:</h3>In addition to binge watching Broad&nbsp;Church and The&nbsp;Queen, Laura and I are working our way through our saved queue of&nbsp;movies</li>
