--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -3,8 +3,8 @@
 <h2 class="section-title">Personal</h2>
 <p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our four year old son Felix. We enjoy all kinds of outdoor activities. I'm originally from Belgium, so seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
 <ul class="entries">
-  <li><h3>Currently Reading:</h3>Freedom (Jonathan&nbsp;Franzen), Atomic&nbsp;Design (Brad&nbsp;Frost), Change&nbsp;By&nbsp;Design (Tim&nbsp;Brown)</li>
-  <li><h3>Currently Watching:</h3>In addition to binge watching Broad&nbsp;Church and The&nbsp;Queen, Laura and I are working our way through our saved queue of&nbsp;movies</li>
-  <li><h3>Currently Learning:</h3> Design Systems, Service Design, Conversational&nbsp;UI, Adobe&nbsp;XD, Drupal&nbsp;8</li>
+  <li><h3>Currently Reading:</h3>4,3,2,1 (Paul&nbsp;Auster), Conversational&nbsp;Design (Erika&nbsp;Hall)</li>
+  <li><h3>Currently Watching:</h3>Glow (Netflix), The Vietnam war: a film by Ken&nbsp;Burns and Lynn&nbsp;Novick</li>
+  <li><h3>Currently Learning:</h3> Design Systems, Service Design, Conversational&nbsp;UI</li>
 </ul>
 </section>
