--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -3,8 +3,8 @@
 <h2 class="section-title">Personal</h2>
 <p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our four year old son Felix. We enjoy all kinds of outdoor activities. I'm originally from Belgium, so seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
 <ul class="entries">
-  <li><h3>Currently Reading:</h3>4,3,2,1 (Paul&nbsp;Auster), Conversational&nbsp;Design (Erika&nbsp;Hall)</li>
-  <li><h3>Currently Watching:</h3>Glow (Netflix), The Vietnam war: a film by Ken&nbsp;Burns and Lynn&nbsp;Novick</li>
-  <li><h3>Currently Learning:</h3> Design Systems, Service Design, Conversational&nbsp;UI</li>
+  <li><h3>Currently Reading:</h3>4,3,2,1 (Paul&nbsp;Auster) | Conversational&nbsp;Design (Erika&nbsp;Hall)</li>
+  <li><h3>Currently Watching:</h3>Insecure (HBO) | Salt Fat Acid Heat (Netflix)</li>
+  <li><h3>Currently Learning:</h3> Design Systems | Solid | Conversational&nbsp;UI</li>
 </ul>
 </section>
