updated whats next

--- a/_includes/next.html
+++ b/_includes/next.html
@@ -1,5 +1,5 @@
 <!-- What's Next Section -->
 <section id="whats-next">
 <h2 class="section-title">What's Next?</h2>
-<p>Having just joined the amazing team at Communicate Health, I am excited to grow as a UX Designer and create wonderful experiences and help simplify health&nbsp;information.</p>
+<p>My work at Communicate Health keeps me plenty busy these days. But it doesn't keep me from dreaming up ambitious plans to quit most social media and switch to an alternative online identity with&nbsp;<a href="https://solid.inrupt.com">Solid</a>.</p>
 </section>
