--- a/_includes/next.html
+++ b/_includes/next.html
@@ -1,5 +1,5 @@
 <!-- What's Next Section -->
 <section id="whats-next">
 <h2 class="section-title">What's Next?</h2>
-<p>My work at Communicate Health keeps me plenty busy these days. But it doesn't keep me from dreaming up ambitious plans to quit most social media and switch to an alternative online identity with&nbsp;<a href="https://solid.inrupt.com">Solid</a>.</p>
+<p>My work at Communicate Health keeps me plenty busy these days. But it doesn't keep me from dreaming up ambitious plans to quit most social media and switch to an alternative online identity built upon&nbsp;<a href="https://solid.inrupt.com">Solid</a>.</p>
 </section>
