Early Jan 2020 updates to personal

--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -3,8 +3,8 @@
 <h2 class="section-title">Personal</h2>
 <p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our four year old son Felix. We enjoy all kinds of outdoor activities. I'm originally from Belgium, so seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
 <ul class="entries">
-  <li><h3>Currently Reading:</h3>4,3,2,1 (Paul&nbsp;Auster) | Conversational&nbsp;Design (Erika&nbsp;Hall)</li>
-  <li><h3>Currently Watching:</h3>Game of Thrones (HBO) | Westworld (HBO)</li>
-  <li><h3>Currently Learning:</h3> Design Systems | Solid | Conversational&nbsp;UI</li>
+  <li><h3>Currently Reading:</h3>On&nbsp;the&nbsp;Move: A&nbsp;Life (Oliver&nbsp;Sacks) | Sapiens: A&nbsp;Brief&nbsp;History&nbsp;of&nbsp;Humankind (Yuval&nbsp;Noah&nbsp;Harari) | Everyday&nbsp;Information&nbsp;Architecture (Lisa&nbsp;Maria&nbsp;Marquis)</li>
+  <li><h3>Currently Watching:</h3>Peaky&nbsp;Blinders (Netflix)</li>
+  <li><h3>Currently Learning:</h3> WordPress&nbsp;5 and Gutenberg | Figma Auto&nbsp;Layout</li>
 </ul>
 </section>
