Updated Felix's age

--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -1,7 +1,7 @@
 <!-- Personal Section -->
 <section id="personal">
 <h2 class="section-title">Personal</h2>
-<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our four year old son Felix. We enjoy all kinds of outdoor activities. I'm originally from Belgium, so seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
+<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our 6 year old son Felix. We enjoy all kinds of outdoor activities. I'm originally from Belgium, so seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
 <ul class="entries">
   <li><h3>Currently Reading:</h3>On&nbsp;the&nbsp;Move: A&nbsp;Life (Oliver&nbsp;Sacks) | Sapiens: A&nbsp;Brief&nbsp;History&nbsp;of&nbsp;Humankind (Yuval&nbsp;Noah&nbsp;Harari) | Everyday&nbsp;Information&nbsp;Architecture (Lisa&nbsp;Maria&nbsp;Marquis)</li>
   <li><h3>Currently Watching:</h3>Peaky&nbsp;Blinders (Netflix)</li>
