--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 html {}
 body {background-color: white; font-size: 18px; font-family: 'lato', sans-serif; max-width: 320px; padding: .5em; line-height: 1.3em; margin:0 auto;}
+@media only screen 
+  and (min-device-width: 320px) {
+    body {width: 100%;}
+}
 h1, h2, h3 {font-family: 'Montserrat', sans-serif;}
 h1 {font-size: 3.5em; line-height: .85em; margin:0; background-color: #000; color: #fff;}
 h1 span {display: block; font-size: .6em;}
