--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 html {}
 body {background-color: white; font-size: 18px; font-family: 'lato', sans-serif; max-width: 320px; padding: .5em; line-height: 1.3em; margin:0 auto;}
 @media only screen 
-  and (min-device-width: 320px) {
+  and (max-device-width: 320px) {
     body {width: 98%;}
 }
 h1, h2, h3 {font-family: 'Montserrat', sans-serif;}
