--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 html {}
 body {background-color: white; font-size: 18px; font-family: 'lato', sans-serif; max-width: 310px; padding: .5em; line-height: 1.3em; margin:0 auto;}
 @media only screen 
-  and (max-device-width: 320px) {
-    body {width: 98%;}
+  and (min-device-width: 320px) {
+    body {width: 90%; max-width: 640;}
 }
 h1, h2, h3 {font-family: 'Montserrat', sans-serif;}
 h1 {font-size: 3.5em; line-height: .85em; margin:0; background-color: #000; color: #fff;}
