--- a/css/styles.css
+++ b/css/styles.css
@@ -1,66 +1,118 @@
-html {}
-body {
-  background-color: white;
-  font-size: 18px;
-  font-family: 'lato', sans-serif;
-  line-height: 1.3em;
-  max-width: 480px;
-  padding: .5em;
-  margin:0 auto;
+html {
+  font-size: 16px;
+  font-family: verdana;
+  color: #061f4a;
+  background-color: #f1f1f1;
 }
-h1, h2, h3 {
-  font-family: 'Montserrat', sans-serif;
+body {
+  margin: 0 auto;
+  padding: .5rem;
+}
+header {
+  margin: 0 auto;
 }
 h1 {
-  font-size: 3.5em;
-  line-height: .85em;
-  margin:0;
-  background-color: #000;
-  color: #fff;
+  display: grid;
+  justify-content: flex-start;
+  gap: 4px 16px;
+  letter-spacing: .05rem;
 }
-h1 span {
+h1 div.name {
+  display: grid;
+  grid-column-start: 1;
+  grid-column-end: 1;
+}
+h1 span.first-name {
+  text-transform: uppercase;
+  font-family: 'Red Hat Display', sans-serif;
+  font-size: 2rem;
+  grid-row-start: 1;
+  grid-row-end: 1;
+}
+h1 span.last-name{
+  text-transform: lowercase;
+  font-family: 'Arvo', serif;
+  font-size: 1.5rem;
+  grid-row-start: 2;
+  grid-row-end: 2;
+}
+h1 span.byline {
   display: block;
-  font-size: .6em;
-}
-span.role {
-  display: block;
-  font-size: .4em;
-  line-height: 1.2em;
-}
-h2 {
-  margin-top: 1.25em;
-  color: #fff;
-  background-color: #000;
-  padding: 4px 0;
-}
-h3 {
-  margin-top: 1.25em;
-  margin-bottom:.5em;
+  text-transform: none;
+  font-family: 'Arvo', serif;
+  font-size: 1.5rem;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  border-left: 6px solid #061f4a;
+  padding-left: 1rem;
 }
 a {
-  color:#0000BB;
+  text-decoration: none;
+  border-bottom: 2px solid #007190;
+  color:#007190;
 }
-#contact ul {
+a:hover {
+  background-color: #ddff0f;
+  color:#061F4A;
+  border-bottom: 4px solid #061F4A;
+}
+a:visited {
+  color: #6B1348;
+  }
+nav {
+  display:block;
+  margin: 2rem 0;
+}
+nav li {
   list-style: none;
-  padding-left: .5em;
+  line-height: 2em;
 }
-ul {
-  list-style: square;
-  padding-left: 1em;
+nav a {
+  padding: .25em;
+  border-bottom: none;
 }
-li {
-  margin: .75em 0;
+nav a:hover {
+  border-bottom: 5px solid #061F4A;
 }
-footer {
-  font-family: 'Montserrat', sans-serif;
-  font-size: .75em;
-  color:#fff;
-  background-color: #000;
-  margin-top: 3em;
+h3 {
+  font-family: 'Arvo', serif;
 }
+body#intro {
+  background-color: #efefef;
+  color:#333;
+}
+a#logo {
+  text-decoration: none;
+  border-bottom: none;
+  color: #061F4A;
+}
+section {
+  margin: 1rem auto;
+  font-size: 1.25rem;
+  line-height: 2rem;
+}
+p.intro {
+  font-size: 1.25rem;
+  line-height: 1.25rem;
+}
+#project-grid {
+  font-family: 'Arvo', serif;
+  font-size: 1.5rem;
+  line-height: 3rem;
 
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 568px) {
-max-width: 310px;
+}
+@media (min-width: 45em) {
+  html {
+    font-size: 18px;
+}
+section, header {
+  width: 80%;
+}
+@media (min-width: 45em) and (orientation: landscape) {
+  html {
+
+}
+section, header {
+  width: 60%;
+  max-width: 720px;
 }
