--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,9 @@ a:hover {
 a:visited {
   color: #6B1348;
   }
+a:focus {
+  border: 4px solid #061F4A;
+  }
 nav {
   display:block;
   margin: 2rem 0;
